objects/QIDC__OK_Field_Mapping_ims__c.object
<CustomObject>
    <description>Defines mappings between OneKey attributes and SObject fields.</description>
    <fields>
        <fullName>QIDC__Additional_SObject_Fields_ims__c</fullName>
        <description>Target Salesforce fields that are mapped to the attribute.</description>
        <inlineHelpText>Target Salesforce fields that are mapped to the attribute.</inlineHelpText>
        <label>Additional SObject Fields</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QIDC__Country_ims__c</fullName>
        <description>To store the country code</description>
        <label>Country_ims</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__Has_Record_Mapping_ims__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, this mapping will determine record type mappings.</description>
        <inlineHelpText>If checked, this mapping will determine record type mappings.</inlineHelpText>
        <label>Defines Record Mapping?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QIDC__Is_Primary_Key_ims__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The Primary Key for the object mapping. Only one field can be Primary Key for a given mapping.</description>
        <inlineHelpText>The Primary Key for the object mapping. Only one field can be Primary Key for a given mapping.</inlineHelpText>
        <label>Is Primary Key?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QIDC__OK_Object_Mapping_ims__c</fullName>
        <description>The OneKey entity that the fields being mapped belong to.</description>
        <inlineHelpText>The OneKey entity that the fields being mapped belong to.</inlineHelpText>
        <label>OneKey Object Mapping</label>
        <referenceTo>QIDC__OK_Object_Mapping_ims__c</referenceTo>
        <relationshipLabel>OneKey Field Mappings</relationshipLabel>
        <relationshipName>OK_Field_Mappings_ims</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>QIDC__OneKey_Attribute_ims__c</fullName>
        <description>Developer name of attribute that links to the target Salesforce field.</description>
        <externalId>true</externalId>
        <inlineHelpText>Developer name of attribute that links to the target Salesforce field.</inlineHelpText>
        <label>OneKey Attribute</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__SObject_Field_ims__c</fullName>
        <description>Target Salesforce field that is mapped to the attribute.</description>
        <externalId>true</externalId>
        <inlineHelpText>Target Salesforce field that is mapped to the attribute.</inlineHelpText>
        <label>SObject Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>OneKey Field Mapping</label>
    <nameField>
        <label>OneKey Field Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OneKey Field Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>